Disponibilização da primeira versão do aplicativo

--- a/src/app/pages/cadastrar-usuario/cadastrar-usuario.html
+++ b/src/app/pages/cadastrar-usuario/cadastrar-usuario.html
@@ -1,46 +1,51 @@
-
 <ion-header>
-  <ion-navbar>
+
+   <ion-navbar>
     <ion-title>CADASTRAR USUÁRIO</ion-title>
   </ion-navbar>
+
 </ion-header>
 
+
 <ion-content padding>
-  <ion-avatar>
+   <ion-avatar>
         <img class="circle" [src]="profileImage">
-  </ion-avatar>
+   </ion-avatar>
   
     <ion-item>
-      <ion-label>usuario</ion-label>
-      <ion-input type="text"  [(ngModel)]="usuario.nome"></ion-input>
+      <ion-label floating>Nome Completo</ion-label>
+      <ion-input type="text" [(ngModel)]="usuario.nome"> </ion-input>
     </ion-item>
     
     <ion-item>
-      <ion-label floating>Email</ion-label>
-      <ion-input type="text" [(ngModel)]="usuario.email"></ion-input>
+      <ion-label floating >Email</ion-label>
+      <ion-input  type="text" [(ngModel)]="usuario.email"></ion-input>
     </ion-item>
-  
+
+
     <ion-item>
-      <ion-label floating>CPF ou CNPJ</ion-label>
-      <ion-input type="text" [(ngModel)]="usuario.cpfOuCnpj"></ion-input>
+        <ion-label floating>Função</ion-label>
+        <ion-select [(ngModel)]="usuario.tipoFuncao" okText="Ok" cancelText="Cancelar" >
+          <ion-option *ngFor="let funcoes of listafuncoes" value="{{funcoes.id}}" >{{funcoes.valor}}</ion-option>
+        </ion-select>
     </ion-item>
-  
+
     <ion-item>
-      <ion-label floating>Tipo Funcao</ion-label>
-      <ion-input type="text" [(ngModel)]="usuario.tipoFuncao"></ion-input>
+        <ion-label floating>Tipo Metodologia</ion-label>
+        <ion-select [(ngModel)]="usuario.tipoMetodologia"  okText="Ok" cancelText="Cancelar">
+          <ion-option *ngFor="let metodologias of listaMetodologias" value="{{metodologias.id}}">{{metodologias.descricao}}</ion-option>
+        </ion-select>
     </ion-item>
-  
+
+
     <ion-item>
       <ion-label floating>Senha</ion-label>
       <ion-input type="password" [(ngModel)]="usuario.senha"></ion-input>
     </ion-item>
   
     <ion-item>
-      <ion-label floating>Tipo Metodologia</ion-label>
-      <ion-input type="text" [(ngModel)]="usuario.listaTipoMetodologia"></ion-input>
-    </ion-item>
-  
-    <ion-item>
       <button ion-button block (click)="Cadastrar(usuario)" color="primary">Cadastrar </button>
     </ion-item>
+
 </ion-content>
+
