--- a/src/app/pages/esqueci-senha/esqueci-senha.html
+++ b/src/app/pages/esqueci-senha/esqueci-senha.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the EsqueciSenhaPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -25,7 +19,7 @@
   </ion-item>
 
   <ion-item>  
-    <button ion-button block (click)="MudarSenha(usuario)" color="primary">Reiniciar Senha </button>
+    <button ion-button block (click)="esqueciSenha(usuario)" color="primary">Reiniciar Senha </button>
   </ion-item>
 
 </ion-content>
