--- a/src/app/pages/configuracoes/configuracoes.html
+++ b/src/app/pages/configuracoes/configuracoes.html
@@ -15,5 +15,31 @@
 
 
 <ion-content padding>
-  <p>em contrução</p>
+   <!--
+  <button ion-button block (click)="scheduleNotification()">Schedule</button>
+  <button ion-button block (click)="recurringNotification()">Every Minute</button>
+  <button ion-button block (click)="repeatingDaily()">Daily</button>
+  -->
+
+  <ion-card>
+      <ion-card-content>
+          <p> Por favor, informe a hora para receber a notificacao </p>
+          <ion-item>
+            <ion-label>Hora: </ion-label>
+            <ion-datetime display-format="HH: mm" picker-format="HH: mm" ([ngModel])="myHora"></ion-datetime>
+          </ion-item>
+      </ion-card-content>
+  </ion-card>
+    
+  <button ion-button block (click)="AgendarSchedule()" color="primary">Agendar Notificação</button>
+
+  <ion-list>
+    <ion-item *ngFor="let n of scheduled">
+      <ion-label text-wrap>
+        {{ n.id }} - {{ n.title }}
+        <p>Trigger: {{ n.trigger | json }} </p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
