--- a/src/app/pages/configuracoes/configuracoes.html
+++ b/src/app/pages/configuracoes/configuracoes.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the ConfiguracoesPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
@@ -15,23 +10,18 @@
 
 
 <ion-content padding>
-   <!--
-  <button ion-button block (click)="scheduleNotification()">Schedule</button>
-  <button ion-button block (click)="recurringNotification()">Every Minute</button>
-  <button ion-button block (click)="repeatingDaily()">Daily</button>
-  -->
 
-  <ion-card>
-      <ion-card-content>
-          <p> Por favor, informe a hora para receber a notificacao </p>
-          <ion-item>
-            <ion-label>Hora: </ion-label>
-            <ion-datetime display-format="HH: mm" picker-format="HH: mm" ([ngModel])="myHora"></ion-datetime>
-          </ion-item>
-      </ion-card-content>
-  </ion-card>
-    
-  <button ion-button block (click)="AgendarSchedule()" color="primary">Agendar Notificação</button>
+  <h4>Agendamento da notificação programado para todo dia as {{hora}} horas. Caso deseje mudar selecione a hora abaixo.</h4>
+
+  <ion-item>
+      <ion-label>Horário: </ion-label> 
+      <ion-input type="text" [(ngModel)]="hora"></ion-input>
+  </ion-item> 
+
+  <button ion-button block (click)="scheduleNotification()">Agendar</button>
+
+  <h4>Agendamento da notificação Instantaneo</h4>
+  <button ion-button block (click)="PraticaNow">Agendar</button>
 
   <ion-list>
     <ion-item *ngFor="let n of scheduled">
