--- a/src/app/pages/esqueci-senha/esqueci-senha.html
+++ b/src/app/pages/esqueci-senha/esqueci-senha.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
 
   <ion-avatar>
   <img class="circle" [src]="profileImage">
@@ -18,8 +18,7 @@
     <ion-input type="text" [(ngModel)]="usuario.email"></ion-input>
   </ion-item>
 
-  <ion-item>  
-    <button ion-button block (click)="esqueciSenha(usuario)" color="primary">Reiniciar Senha </button>
-  </ion-item>
+  <button ion-button block (click)="esqueciSenha(usuario)" color="primary">Reiniciar Senha </button>
+  
 
 </ion-content>
