--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -18,24 +18,19 @@
 
   <ion-item>
     <ion-label floating>Email</ion-label>
-    <ion-input type="text" [(ngModel)]="usuario.email"></ion-input>
+    <ion-input type="email" [(ngModel)]="usuario.email"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label floating>Password</ion-label>
     <ion-input type="password" [(ngModel)]="usuario.senha"></ion-input>
   </ion-item>
-
-
-  <button ion-button block (click)="login(usuario)" color="primary">Fazer Login</button>
-
-
-  <ion-item>
-    <a (click)="esqueciMinhaSenha()">Esqueci Senha</a>
-  </ion-item>
-
-  <ion-item>
-    <a (click)="criarConta()">Criar Cadastro</a>
-  </ion-item>
+  
+  <br>
+  <button ion-button block (click)="login(usuario)" color="success">Fazer Login</button>
+  <br>
+  <button ion-button block (click)="criarConta()" color="danger">Criar Conta</button>
+  <br>
+  <button ion-button block (click)="esqueciMinhaSenha()" color="warning">Esqueci Senha</button>
 
 </ion-content>
